# good-bot-runner

./: .gitignore  .replit  CHANGELOG.md  Dockerfile  README.md  dev-requirements.txt  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
runner/: README.md  __init__.py  classmodule.py  cli.py  commands_runner.py  funcmodule.py  human_typing.py  process_watcher.py  runner.py  typing.py
samples/: README.md  passwords.yaml
samples/img/: README.md
samples/runner/: runner_demo.yaml
samples/typos/: typos.yaml
samples/with_passwords/: .env  docker-compose.yml  passwords.yaml  with_passwords.sh
tests/: test_funcs.py  test_human_typing.py  test_runner.py
tests/examples/: bad_conf_key_names.yaml  bad_conf_keys.yaml  bad_conf_type.yaml
