[tool.poetry]
name = "runner"
version = "1.1.0"
description = "Good-Bot's command runner."
authors = ["TrickyTroll <tricky@beon.ca>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.0"
PyYAML = "^6.0"
pexpect = "^4.8.0"
click = "^7.1.2"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
mypy = "^0.812"
black = "^20.8b1"
typing-extensions = "^3.10.0.0"
typed-ast = "^1.4.3"
pytest = "^6.2.4"
hypothesis = "^6.13.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
runner = "runner.cli:main"
